--- a/final_project_NLP.ipynb
+++ b/final_project_NLP.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "#### Solution:\n",
         "\n",
-        "By training the model around emojis, and ensuring that the model predicts emojis based on text, we can ensure proper context is captured. This pre-trained model can then be transferred and used in other domains of sentiment analysis and applied on other datasets. Additionally, DeepMoji can be compared on "
+        "By training the model around emojis, and ensuring that the model predicts emojis based on text, we can ensure proper context is captured. This pre-trained model can then be transferred and used in other domains of sentiment analysis and applied on other datasets. "
       ]
     },
     {
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "zyyBmH1Zcu_E",
         "colab": {
@@ -195,12 +195,12 @@
       "metadata": {
         "id": "6E6VdeFgiJdi"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "WddcNH-Acu_F"
       },
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "YQl1YY6icu_F"
       },
@@ -553,7 +553,7 @@
       "metadata": {
         "id": "HUVh1QFeQDB0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -584,7 +584,7 @@
         "id": "lFGk7JeTQPGl",
         "outputId": "365cc91e-059a-4cf4-9fd3-86032b7291d3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +638,7 @@
         },
         "outputId": "521d8b1e-1dfe-462b-99e3-0c438f3838f6"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
